# HOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindARPACK.cmake
Data/: .gitignore
Lib/: Makefile
Lib/MPM/: CMakeLists.txt  MpmGrid.h  MpmInitializationHelper.h  MpmParticleHandleBase.cpp  MpmParticleHandleBase.h  MpmSimulationBase.cpp  MpmSimulationBase.h
Lib/MPM/Force/: FBasedMpmForceHelper.cpp  FBasedMpmForceHelper.h  JBasedMpmForceHelper.cpp  JBasedMpmForceHelper.h  LinearCorotatedMpmForceHelper.cpp  MpmForceBase.cpp  MpmForceBase.h  MpmForceHelperBase.h
Lib/MPM/instantiations/: FBasedMpmForceHelper2d.cpp  FBasedMpmForceHelper2f.cpp  FBasedMpmForceHelper3d.cpp  FBasedMpmForceHelper3f.cpp  MpmParticlesHandle2d.cpp  MpmParticlesHandle2f.cpp  MpmParticlesHandle3d.cpp  MpmParticlesHandle3f.cpp
Lib/Ziran/: CMakeLists.txt
Lib/Ziran/CS/Util/: AttributeNamesForward.h
Lib/Ziran/Math/Geometry/: CollisionObject.cpp  CollisionObject.h  PartioIO.h  SimplexMesh.h
Lib/Ziran/Math/Linear/: ConjugateGradient.h  Minres.h  (+3 more)
Lib/Ziran/Physics/: PlasticityApplier.cpp  PlasticityApplier.h
Lib/Ziran/Sim/: BackwardEuler.h  DeformableObjectHandleCore.h  SimulationBase.h
Projects/: CMakeLists.txt
Projects/multigrid/: .gitignore  CMakeLists.txt  Configurations.h  ImplicitSolver.h  MPMMultigridMatrix.h  MultigridInit.h  MultigridInit2D.h  MultigridInit3D.h  MultigridPreconditioner.h  MultigridSimulation.h  MultigridSimulation.inl  README  SparseMatrixFast.h  SquareMatrix.h  Timer.hpp  function_ref.hpp  main.cpp  tog.sh
Scripts/: gen-multigrid-benchmarks.jl
(+19 files in other folders)
